--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -20,6 +20,8 @@
         font-size: 1.6rem;
         background-color: transparent;
         caret-color: var(--primary);
+        outline: none;
+        border: none;
     }
 
     input:not(:placeholder-shown) ~ .search-btn {
