--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import url('https://use.typekit.net/waz4tsx.css');
+@import '~bootstrap/scss/bootstrap';
 
 :root {
     --primary: #fe2c55;
